# elysium

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/entity/src/: users.rs
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: app_state.rs  lib.rs  main.rs  router.rs
backend/src/api/: api.rs  auth.rs  mod.rs  steam.rs  users.rs
backend/src/models/: response.rs  users.rs
backend/src/mw/: require_auth.rs
backend/src/queries/: mod.rs  users_q.rs
backend/src/utils/: api_utils.rs  errors.rs  hash.rs  jwt_auth_utils.rs  middware_utils.rs  mod.rs
backend/tests/: lib.rs  tests_api.rs  tests_utils.rs  utils.rs
entity/: Cargo.toml
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  types.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: layout.tsx  page.tsx
frontend/app/profile/: layout.tsx  page.tsx
frontend/app/psn/: layout.tsx  page.tsx
frontend/app/register/: layout.tsx  page.tsx
frontend/app/steam/: layout.tsx  page.tsx
frontend/app/user/: layout.tsx  page.tsx
frontend/app/xbox/: layout.tsx  page.tsx
frontend/components/: error.tsx  icons.tsx  laoding.tsx  navbar.tsx  theme-switch.tsx
frontend/components/ui/: button-gradient.tsx  input.tsx  label-input-container.tsx
frontend/config/: site.ts
frontend/services/: api-common.ts  steam.ts
frontend/src/: App.tsx  constants.ts  main.tsx  types.ts
frontend/src/components/: ErrorComponent.tsx  GameList.tsx  Header.tsx  Loading.tsx  Navbar.tsx  SteamPlayer.tsx
frontend/src/components/ui/: input.tsx  label.tsx
frontend/src/pages/: Error.tsx  Home.tsx  SignIn.tsx  SignUp.tsx  Steam.tsx  Trophies.tsx  UpdateUserInfo.tsx  UserProfile.tsx
frontend/src/services/: api-common.ts  login.ts  steam.ts
frontend/src/utils/: regex_utils.ts  time.ts
migration/src/: m20220101_000001_create_table.rs
nginx/: nginx.conf
src/: lib.rs  main.rs  router.rs
src/api/: api.rs  auth.rs  mod.rs  tests.rs  users.rs
src/models/: mod.rs  users.rs
src/mw/: require_auth.rs
src/queries/: mod.rs
src/repository/: database.rs  schema.rs
src/utils/: errors.rs  middware_utils.rs  mod.rs
