[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
rand = "0.8.5"
rust-argon2 = "2.0.0"
diesel_migrations = "2.1.0"
log = "0.4"
env_logger = "0.10"
listenfd = "1.0.1"
lazy_static = "1.4"
serde_json = "1.0"
actix-redis = { version = "0.13", features = ["web"] }
actix-session = { version = "0.8", features = ["redis-actor-session"]}