[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = " 0.6.20", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "fast-rng"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10"
sea-orm = { version = "0.12.3", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros" ] }
entity = { path = "../webapp/entity" }
migration = { path = "../webapp/migration" }
bcrypt = "0.15.0"
tower = "0.4.13"
tower-sessions = { version ="0.3.1", features = ["redis-store"] }
time = { version = "0.3.29", features = ["serde"] }
tower-cookies = "0.9.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
