[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[lib]
doctest=false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
mime = "0.3"
bb8 = "0.8.1"
tracing = "0.1"
tower = "0.4.13"
redis = "0.23.3"
dotenv = "0.15.0"
bcrypt = "0.15.0"
bb8-redis = "0.13.1"
env_logger = "0.10"
jsonwebtoken = "9.0.0"
entity = { path = "../backend/entity" }
migration = { path = "../backend/migration" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
axum = { version = " 0.6.20", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "fast-rng"] }
sea-orm = { version = "0.12.3", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros" ] }


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
